--- a/style.css
+++ b/style.css
@@ -1,44 +1,31 @@
 * {
   box-sizing: border-box;
+  --chumbo: rgb(59, 57, 57);
+  --yellow:#f8f82f;
+  --black: #000000;
+  --white: #ffffff;
 }
 
-
+/* <a href='https://br.freepik.com/fotos/fundo'>Fundo foto criado por benzoix - br.freepik.com</a> */
 body {
-  background-color: #1d376e;
+  background-position: center;
+  background-attachment: fixed;
+  background-image: url('./image/background.jpg');
   flex-wrap: wrap;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-
 @font-face {
   font-family: 'pokemonHollow';
   src: url('./Fontes/Pokemon\ Solid.ttf');
   font-weight: normal;
   font-style: normal;
 }
-
 .nossoLogo {
-  font-family: 'pokemonHollow';
-  text-align: center;
-  font-size: 6.25rem;
-  font-weight: bolder;
-  display: block;
-  color: #FFCB05;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #2A75BB;
-  text-shadow: 0 1px 0 #1f507e, 0 2px 0 #1f507e, 0 3px 0 #1f507e, 0 4px 0 #1f507e, 0 5px 0 #1f507e, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
-  letter-spacing: 9px;
-  margin-bottom: 0px;
-  margin-top: auto;
+ width: 80%;
 }
-
 .imgBola {
-  width: 5%;
-  margin: 0 auto 50px;
-  transition: 0.8s;
-}
-
-.imgBola:hover {
-  transform: rotate(350deg);
+  width: 20%;
+  margin: 0 auto;
 }
 
 .flexPokemon {
@@ -46,35 +33,30 @@ body {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
 }
-
-.searchPokemon, .filterPokemon, .orderPokemon,  .homePokemon {
+.searchPokemon, .filterPokemon, .orderPokemon,  .refreshPokemon {
   padding: 10px;
 }
-
 .titulo {
   text-align: center;
   width: 100%;
 }
-
 img {
   display: block;
   margin: 20px auto
 }
-
 nav {
   margin-bottom: 30px;
   text-align: center;
   justify-content: space-between;
 }
-
 label {
   font-family: 'Staatliches', cursive;
   font-weight: bold;
-  color: #fff;
+  color: var(--white);
   font-size: 20px;
 }
-
 select {
   border: 2px solid #030f29;
   border-radius: 10px;
@@ -83,66 +65,57 @@ select {
   font-size: 18px;
   margin-right: 10px;
 }
-
 #listaPokemon {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-
 .card-container {
   font-family: 'inter', sans-serif;
   position: relative;
   width: 20%;
   height: 320px;
-  background-color: #1d376e;
   margin: 30px 10px;
 }
-
 .thecard {
   position: absolute;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
   transition: all 0.5s ease; 
-  background-image: linear-gradient(#f8f82f,#5060bb, #f05757);
+  background-color: var(--yellow);
   border-radius: 10px;
-  box-shadow: 8px 15px 13px -7px #000000;
+  box-shadow: 8px 15px 13px -7px var(--black);
 }
-
 .thecard:hover {
   transform: rotateY(180deg)
 }
-
 .card-front {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   background-color: light;
-  color: #000;
+  color: var(--black);
 }
-
 .card-back {
   padding-top: 60px;
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  color: #000; 
+  color: var(--black); 
   font-weight: bold;
-  background-image: linear-gradient(#f8f82f,#5060bb, #f05757);
+  background-color: var(--yellow);
   transform: rotateY(180deg);
   border-radius: 10px;
-  box-shadow: 8px 15px 13px -7px #000000;
+  box-shadow: 8px 15px 13px -7px var(--black);
 }
-
 .title, .tipos {
   margin: 10px;
   display: flex;
   justify-content: space-between;
 }
-
 .title {
   font-size: larger;
   font-weight: bolder;
@@ -151,52 +124,42 @@ select {
   padding-right: 10px;
   letter-spacing: 2px;
 }
-
 .infos {
   text-align: center;
   font-size: 20px;
 }
-
 .card img {
   display: block;
   width: 50%;
   margin: 0 auto;
 }
-
 .card p:last-child {
   text-align: center;
 }
-
 .tipos {
   display: flex;
   justify-content: center;
   text-transform: capitalize;
 }
-
 .fas {
   border: 2px #030f29;
   font-size: 20px;
   color: #030f29;
 }
-
 .far {
   font-size: 50px;
-  color: #fff;
+  color: var(--white)
 }
-
 .test {
   text-transform: capitalize;
 }
-
 .about-pokemon {
   font-size: 17px;
 }
-
 .types-pokemon {
   justify-content: space-between;
   font-weight: bold;
 }
-
 #search {
   border: 2px solid #030f29;
   border-radius: 10px;
@@ -205,7 +168,6 @@ select {
   font-size: 18px;
   padding: 1px;
 }
-
 #btnSearch {
   height: 40px;
   border-radius: 10px;
@@ -213,24 +175,21 @@ select {
   padding: 0px;
   width: 40px;
   margin-right: 30px;
-  background-color: #fff;
+  background-color: var(--white);
 }
-
-#btnHome {
+#btnRefresh {
   border-radius: 10px;
   border: 2px solid #030f29;
   margin-right: 30px;
-  background-color: #fff;
+  background-color: var(--white);
   width: 40px;
   height: 40px;
 }
-
 .btnsMS {
   display: flex;
   justify-content: center;
   width: 100%;
 }
-
 #btnShowMore, #btnShowAll {
   text-align: center;
   font-size: larger;
@@ -239,74 +198,64 @@ select {
   border: 2px solid #030f29;
   padding: 0px;
   width: 200px;
-  background-color: #fff;
+  background-color: var(--white);
   font-weight: bold;
   text-transform: capitalize;
   margin-right: 10px;
   margin-left: 10px;
   transition: 0.4s;
-  box-shadow: 8px 15px 13px -7px #000000;
+  box-shadow: 8px 15px 13px -7px var(--black);
   font-family: 'Staatliches', cursive;
 }
-
 #btnShowMore:hover, #btnShowAll:hover {
   background-color: rgb(184, 183, 183);
 }
-
 footer {
   margin-top: 20px;
   text-align: center;
-  color: #706e6e;
+  color: var(--white);
   height: 45px;
   margin-left: 50px;
   font-family: 'Staatliches', cursive;
   font-size: 18px;
   padding-right:70px;
 }
-
 a {
-  color: #706e6e;
+  color: var(--white);
   text-decoration: none;
 }
-
 a:hover {
   color: #f8f82f;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-.flexPokemon {
+  .flexPokemon {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-end;
   }
-
   #search , #type , #order {
     width: 100%;
   }
-
   .card-container {
     width: 40%;
   }
-
-  #btnHome {
+  #btnRefresh {
     width: 60px;
     height: 60px;
     margin-right: 0;
   }
-
   .title {
     font-size: 22px;
-    text-shadow: 0 0 black;
+    text-shadow: 0 0 var(--black);
     text-transform: capitalize;
     padding-left: 10px;
     padding-right: 10px;
     letter-spacing: 2px;
   }
-  
   .types-pokemon {
     font-size: 22px;
   }
-
   .thecard {
     position: relative;
     width: 80%;
@@ -316,101 +265,103 @@ a:hover {
     border-radius: 10px;
     margin-left: 10%;
   }
-
   .thecard:hover {
     transform: rotateY(180deg)
   }
-  
   .card-front {
     position: absolute; 
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     background-color: light;
-    color: #000; 
+    color: var(--black); 
   }
 }
 
-
-
-@media (min-width: 320px) and (max-width: 767px) {
-
+@media (min-width: 481px) and (max-width: 767px) {
   .flexPokemon {
     display: flex;
     justify-content: space-around;
     align-items: center;
   }
-
   #search , #type , #order {
     width: 100%;
   }
-
   .card-container {
     width: 40%;
   }
-  #btnHome {
-    width: 60px;
-    height: 60px;
+  #btnRefresh {
+    /* width: 60px;
+    height: 60px; */
     margin-right: 0;
   }
-
   .title {
     font-size: 22px;
-    text-shadow: 0 0 black;
+    text-shadow: 0 0 var(--black);
     text-transform: capitalize;
     padding-left: 10px;
     padding-right: 10px;
     letter-spacing: 2px;
   }
-  
   .types-pokemon {
     font-size: 22px;
   }
-
   .thecard {
     position: relative;
     width: 80%;
     height: 100%;
     transform-style: preserve-3d;
     transition: all 0.5s ease;
-    background-image: linear-gradient(#f8f82f,#5060bb, #f05757);
+    background-color: var(--yellow);
     border-radius: 10px;
     margin-left: 10%;
   }
-
   .thecard:hover {
     transform: rotateY(180deg)
   }
-  
   .card-front {
     position: absolute; 
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     background-color: light;
-    color: #000; 
+    color: var(--black);
   }
-  
   .card-back {
     padding-top: 60px;
     position: absolute; 
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    color: #000; 
+    color:var(--black);
     font-weight: bold;
-    background-image: linear-gradient(#f8f82f,#5060bb, #f05757);
+    background-color: var(--yellow);
     transform: rotateY(180deg);
     border-radius: 10px;
   }
 }
 
-@media (min-width:320px) and (max-width:480px){
+@media (max-width:480px){
   .nossoLogo{
     font-size: 2.5rem;
   }
   .flexPokemon{
     flex-direction: column;
+  }
+  .searchPokemon, .filterPokemon, .orderPokemon{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+  #search, select{
+    width: 80%;
+    margin-top: 10px;
+  }
+  .refreshPokemon, #btnRefresh{
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
   }
   .card-container{
     width: 100%;
@@ -430,6 +381,4 @@ a:hover {
     padding: 20px 0;
     margin: 10px 0;
   }
-  
 }
-
